Added notebook for Sesion 16

--- a/session16.ipynb
+++ b/session16.ipynb
@@ -4,30 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Programming From The Very Basics Using Python - Session 15\n",
-    "#### Importing python modules\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Mon Feb 26 18:48:30 2024'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import time\n",
-    "\n",
-    "time.ctime()"
+    "## Programming From The Very Basics Using Python - Session 16\n",
+    "#### Working with Strings - Basics\n"
    ]
   }
  ],
